Fix style on network details to put scrollbar in tab contents.
Make internet details tab contents flexible size and move header of network details out of content-area.

BUG=118126
TEST=Open network details, scale down browser until you see a scrollbar. This scrollbar will be within the tab's contents.

Review URL: https://chromiumcodereview.appspot.com/9701111

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@127533 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: eef71a26986a13e63d3a91f4a02b3a0effba6526

--- a/chrome/browser/resources/options2/chromeos/internet_detail.css
+++ b/chrome/browser/resources/options2/chromeos/internet_detail.css
@@ -4,6 +4,8 @@
 
 /* Force tab strip to extend to the left and right edges of the window. */
 #internet-details-content-area {
+  -webkit-box-orient: vertical;
+  display: -webkit-box;
   margin: 0 !important;
   padding: 0 !important;
 }
@@ -47,6 +49,8 @@
 /* Fix the height of the subpages so that the dialog does not resize when the
    user switches tabs. */
 #internet-details-content-area > .subpages-tab-contents {
+  -webkit-box-flex: 1;
+  -webkit-box-sizing: border-box;
   -webkit-padding-end: 10px;
   height: 350px;
   min-width: 480px;
